--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="campos.tres.minimo.ProyectoFinal_StudyJam">
+    package="campos.tres.minimo.recetasdenavidadenelmundo">
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -15,10 +15,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="campos.tres.minimo.ProyectoFinal_StudyJam.MainActivity">
+        <activity android:name="campos.tres.minimo.recetasdenavidadenelmundo.MainActivity">
 
         </activity>
-        <activity android:name="campos.tres.minimo.ProyectoFinal_StudyJam.MisRecetas" />
+        <activity android:name="campos.tres.minimo.recetasdenavidadenelmundo.MisRecetas" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -32,9 +32,9 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name="campos.tres.minimo.ProyectoFinal_StudyJam.MapsActivity"
+            android:name="campos.tres.minimo.recetasdenavidadenelmundo.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name="campos.tres.minimo.ProyectoFinal_StudyJam.SplashScreenActivity">
+        <activity android:name="campos.tres.minimo.recetasdenavidadenelmundo.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
